Make sure the footer social bar displays block on mobile

--- a/src/sass/partials/_footer.scss
+++ b/src/sass/partials/_footer.scss
@@ -189,6 +189,7 @@
     .cl-social {
         padding: 18px 0 15px;
         margin: 0;
+        display: block;
     }
     .cl-social li:not(:first-child) {
         margin-left: 18%;
